# stream-unrar

./: .travis.yml  CMakeLists.txt  README  README.md  appveyor.yml  stream_unrar.cpp  unrar.patch
backend/: FilePoller.cpp  FilePoller.h  FilePollerGeneric.cpp  FilePollerOSX.cpp  FilePollerPOSIX.cpp  OS.h  OSPosix.cpp
kde_service_menu/: stream-unrar.desktop
